# formationbot-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
discord-bot/: Cargo.toml  README.md  config.yaml
discord-bot/src/: main.rs
src/: dancer.rs  lib.rs  main.rs  parse.rs  png.rs  render.rs
