[package]
name = "formationbot"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.19", optional = true }
derivative = "2.2.0"
gio = { version = "0.19", optional = true }
librsvg = { version = "2.58.1", optional = true }
svg = "0.17"
thiserror = { version = "1.0.26", optional = true }

[features]
png = ["dep:cairo-rs", "dep:gio", "dep:librsvg", "dep:thiserror"]

[workspace]
members = ["discord-bot"]
