[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Emily Crandall Fleischman <emilycf@mit.edu>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
formationbot = { path = "..", features = ["png"] }
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
svg = "0.10.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.10.8"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
